Updat ALLOWED_HOSTS config

--- a/ansible/settings.py.j2
+++ b/ansible/settings.py.j2
@@ -26,7 +26,7 @@ SECRET_KEY = "django-insecure-#e2fl5(3+%7@4kqg!ly7e&csc!$4_m73e&f!9an)-a!2g-8_$c
 # SECURITY WARNING: don't run with debug turned on in production!
 DEBUG = True
 
-ALLOWED_HOSTS = ['23.22.78.238']
+ALLOWED_HOSTS = ['23.22.78.238', 'localhost', '192.168.56.10']
 
 
 # Application definition
