Add AWS S3 configurations

--- a/ansible/settings.py.j2
+++ b/ansible/settings.py.j2
@@ -136,3 +136,4 @@ REST_FRAMEWORK = {
     "PAGE_SIZE": 10,
 }
 BUCKET_NAME = "savannah-bucket"
+AWS_S3_ENDPOINT_URL = os.environ.get("AWS_S3_ENDPOINT_URL")
