--- a/ansible/.env.j2
+++ b/ansible/.env.j2
@@ -8,4 +8,5 @@ export APP_PORT={{ service_port }}
 
 export AWS_SECRET_ACCESS_KEY={{ aws_access_key }}
 export AWS_ACCESS_KEY_ID={{ aws_access_key_id }}
+export AWS_S3_ENDPOINT_URL={{ aws_s3_endpoint_url }}
 
